--- a/README
+++ b/README
@@ -9,6 +9,61 @@ common web security flaws. It contains generic security flaws that apply to
 most web applications. It also contains lessons that specifically pertain to
 the .NET framework. The excercises in this app are intented to teach about 
 web security attacks and how developers can overcome them.
+--change test 5--
+***************************** Webgoat.NET **********************************
+* Source Code: https://github.com/jerryhoff/WebGoat.NET
+* Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
+****************************************************************************
+
+This web application is a learning platform that attempts to teach about
+common web security flaws. It contains generic security flaws that apply to
+most web applications. It also contains lessons that specifically pertain to
+the .NET framework. The excercises in this app are intented to teach about 
+web security attacks and how developers can overcome them.
+--change test 5--
+***************************** Webgoat.NET **********************************
+* Source Code: https://github.com/jerryhoff/WebGoat.NET
+* Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
+****************************************************************************
+
+This web application is a learning platform that attempts to teach about
+common web security flaws. It contains generic security flaws that apply to
+most web applications. It also contains lessons that specifically pertain to
+the .NET framework. The excercises in this app are intented to teach about 
+web security attacks and how developers can overcome them.
+--change test 5--
+***************************** Webgoat.NET **********************************
+* Source Code: https://github.com/jerryhoff/WebGoat.NET
+* Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
+****************************************************************************
+
+This web application is a learning platform that attempts to teach about
+common web security flaws. It contains generic security flaws that apply to
+most web applications. It also contains lessons that specifically pertain to
+the .NET framework. The excercises in this app are intented to teach about 
+web security attacks and how developers can overcome them.
+--change test 5--
+***************************** Webgoat.NET **********************************
+* Source Code: https://github.com/jerryhoff/WebGoat.NET
+* Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
+****************************************************************************
+
+This web application is a learning platform that attempts to teach about
+common web security flaws. It contains generic security flaws that apply to
+most web applications. It also contains lessons that specifically pertain to
+the .NET framework. The excercises in this app are intented to teach about 
+web security attacks and how developers can overcome them.
+--change test 5--
+***************************** Webgoat.NET **********************************
+* Source Code: https://github.com/jerryhoff/WebGoat.NET
+* Download zip: https://github.com/jerryhoff/WebGoat.NET/zipball/master
+****************************************************************************
+
+This web application is a learning platform that attempts to teach about
+common web security flaws. It contains generic security flaws that apply to
+most web applications. It also contains lessons that specifically pertain to
+the .NET framework. The excercises in this app are intented to teach about 
+web security attacks and how developers can overcome them.
 
 WARNING: THIS WEB APPLICATION CONTAINS NUMEROUS SECURITY VULNERABILITIES 
 WHICH WILL RENDER YOUR COMPUTER VERY INSECURURE WHILE RUNNING! IT IS HIGHLY
